--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "nodemon server"
+    "start": "nodemon server",
+    "migration:create":"knex migrate:make",
+    "migration:up":"knex migrate:latest",
+    "migration:down":"knex migrate:rollback"
   },
   "keywords": [
     "node"
@@ -14,8 +17,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.2.2",
+    "sqlite3": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
