//CRUD de produtos e pedidos funcionando

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon server",
     "migration:create": "knex migrate:make",
     "migration:up": "knex migrate:latest",
-    "migration:down": "knex migrate:rollback"
+    "migration:down": "knex migrate:down"
   },
   "keywords": [
     "node"
