--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,10 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\server.js"
+            "program": "${workspaceFolder}\\server.js",
+            "env": {
+                "JWT_PRIVATE_KEY": "kjasckjnasdiljnaodwiadncuhasdfefrhjsf"
+            }
         }
     ]
 }
